--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 TOKEN_SECRET = u3RQlk0lSG
-DATABASE_LOCAL = mongodb://localhost:27017/technoHaat
+DATABASE_LOCAL = mongodb://localhost:27017/technoHaatsssss
 PORT=5000
