--- a/.env
+++ b/.env
@@ -14,3 +14,4 @@ VERCEL_GIT_COMMIT_MESSAGE=""
 VERCEL_GIT_COMMIT_AUTHOR_LOGIN=""
 VERCEL_GIT_COMMIT_AUTHOR_NAME=""
 MONGODB_URI="mongodb+srv://vercel-admin-user:dvtoQTVxoJsQYK6b@cluster0.db3htbp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+PORT= 5000
